Added methods to retrieve Roles based on id and by name Can assign role to individual user Can assign role to lists of username plus discriminator This should pave the way for the command.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /DiscordRoleBot/obj/Debug/netcoreapp3.0
 /DiscordRoleBot/obj/Release/netcoreapp3.0
 /DiscordRoleBot/obj
+bin
+obj
+appsettings.json
