Added a csv ApplicantsFile and handler as a stop gap until we have DB support.
The format of the file is:
applicantId,discordSnowflake

if a snowflake has not been assigned to the applicant id then it will either be blank or false:
applicantId,
applicantId,false

This is connected to the ApplicantModule which will check this list to validate the Applicant.cs

--- a/DiscordRoleBot/DiscordRoleBot.csproj
+++ b/DiscordRoleBot/DiscordRoleBot.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="applicants.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
