--- a/DiscordRoleBot/DiscordRoleBot.csproj
+++ b/DiscordRoleBot/DiscordRoleBot.csproj
@@ -26,6 +26,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="students.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
