I think that the Canvas build report post was never completing causing the bot to hang. So, I have theoretically added a timeout handling.

--- a/DiscordRoleBot/DiscordRoleBot.csproj
+++ b/DiscordRoleBot/DiscordRoleBot.csproj
@@ -21,13 +21,13 @@
 
   <ItemGroup>
     <None Update="applicants.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="students.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
