Added logging and notify when a new user joins

--- a/DiscordRoleBot/DiscordRoleBot.csproj
+++ b/DiscordRoleBot/DiscordRoleBot.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <None Update="applicants.txt">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
